[package]
name = "cargo-tizen"
description = "Cargo tool to compile and run tizen applications (wrapper arround tizen sdk tools)"
version = "0.1.0"
authors = ["Anderson Danilo <contact@andersondanilo.com>"]
edition = "2018"
keywords = ["tizen", "cargo", "plugin", "subcommand"]
license = "apache-2.0"
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::cargo-plugins"
]
readme = "README.md"
repository = "https://github.com/tizen-rs/cargo-tizen"
homepage = "https://github.com/tizen-rs/cargo-tizen"

[dependencies]
toml = "~0.5.8"
clap = "~2.33"
sxd-xpath = "~0.4.2"
sxd-document = "~0.3.2"
cli-table = "0.4"

