[package]
name = "cargo-rutin-tizen"
description = "Cargo tool to compile and run tizen applications (wrapper arround tizen sdk tools)"
version = "0.1.0"
authors = ["Anderson Danilo <contact@andersondanilo.com>"]
edition = "2018"
keywords = ["tizen", "cargo", "plugin", "subcommand", "rutin"]
license = "Apache-2.0"
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::cargo-plugins"
]
readme = "README.md"
repository = "https://github.com/andersondanilo/cargo-rutin-tizen"
homepage = "https://github.com/andersondanilo/cargo-rutin-tizen"

[[bin]]
name = "cargo-tizen"
path = "src/cargo-tizen/main.rs"

[dependencies]
toml = "~0.5.8"
clap = "~2.33"
sxd-xpath = "~0.4.2"
sxd-document = "~0.3.2"
cli-table = "0.4"
colored = "2"
dialoguer = "~0.8.0"
